--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exempel 3</title>
-    <link rel="stylesheet" href="cykelpump.css">
+    <link rel="stylesheet" href="design.css">
+    
 </head>
 <body>
-    <h1>Rubrik</h1>
+    <div id="content"></div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
