--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exempel 3</title>
-    <link rel="stylesheet" href="design.css">
+    <link rel="stylesheet" href="https://gragru.github.io/exempel3/design.css">
     
 </head>
 <body>
     <div id="content"></div>
 
 
-    <script src="script.js"> </script>
+    <script src="https://gragru.github.io/exempel3/script.js"> </script>
 </body>
 </html>
