--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exempel 3</title>
     <link rel="stylesheet" href="https://gragru.github.io/exempel3/design.css">
-    
+    <script>
+        var temp = 23;
+        var hum = 85;
+    </script>
 </head>
 <body>
     <div id="content"></div>
