New Header.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     </script>
 </head>
 <body>
-    <div id="content"></div>
+    <iframe src="https://gragru.github.io/exempel3/header.html" seamless></iframe>
 
+    <div id="content"></div>
 
     <script src="https://gragru.github.io/exempel3/script.js"> </script>
 </body>
