--- a/header.html
+++ b/header.html
@@ -1,1 +1,12 @@
-<h1>My IOT Administration</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://gragru.github.io/exempel3/design.css">
+</head>
+<body>
+    <img src="admin.png"><span>My IOT Administration</span>
+</body>
+</html>
