--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exempel 3</title>
-    <link rel="stylesheet" href="https://gragru.github.io/exempel3/design.css">
+    <link rel="stylesheet" href="https://gragru.github.io/exempel3/design.css?">
     <script>
         var temp = 23;
         var hum = 85;
     </script>
 </head>
 <body>
-    <iframe src="https://gragru.github.io/exempel3/header.html" seamless></iframe>
-
     <div id="content"></div>
-
-    <script src="https://gragru.github.io/exempel3/script.js"> </script>
+    <script src="https://gragru.github.io/exempel3/script.js?"> </script>
 </body>
 </html>
